Adição de funcionalidades
Criação do banco de dados e dos repositorys responsaveis por cada tabela.
Criação da função de chamado da API do Gemini (Futuramente trocar para ele analisar os dados do grafico)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,8 +18,9 @@
         <!-- Tela principal configurada -->
         <activity
             android:name=".TelaLoading.TelaLoading"
-            android:exported="true">
-        <intent-filter>
+            android:exported="true"
+            android:launchMode="singleTask">
+            <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
