--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fullscreen"
+        android:theme="@style/Theme.SCManager"
         tools:targetApi="31">
 
         <!-- Tela principal configurada -->
         <activity
-            android:name=".TelaLoading.TelaLoading"
+            android:name=".Inicial.Tela.TelaInicial"
             android:exported="true"
-            android:launchMode="singleTask">
+            android:theme="@style/Theme.App.Starting">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
-        <activity android:name=".TelaInicial.TelaInicial" />
-        <activity android:name=".TelaGerenciamentoCliente.TelaGerenciamentoCliente" />
+
+        <activity
+            android:name=".Cliente.Tela.TelaGerenciamentoCliente"
+            android:theme="@style/Theme.SCManager"/>
 
         <meta-data
             android:name="preloaded_fonts"
