Att (Tela de gerenciamento aprimorada)
A tela de gerenciamento foi alterada, todos tipos de registro estão unificados na mesma tela para um maior dinamismo. Consequentemente, foi adicionado um conjunto de botões para alterar a visibilidade dos registros desejados. O recyclerView foi alterado, agora sendo utilizado juntamente do cardView.

Pequenos ajustes no tema escuro do App.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
 
         <activity
-            android:name=".Cliente.Tela.TelaGerenciamentoCliente"
+            android:name=".Gerenciamento.Tela.TelaGerenciamento"
             android:theme="@style/Theme.SCManager"/>
 
         <meta-data
