--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,24 +9,22 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:windowBackground="@drawable/gradiente_fundo_loading"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SCManager"
         tools:targetApi="31">
 
-        <!-- Tela principal configurada -->
+        <!-- Tela inicial com Splash Screen nativa -->
         <activity
             android:name=".Inicial.Tela.TelaInicial"
             android:exported="true"
-            android:theme="@style/Theme.App.Starting">
+            android:theme="@style/Theme.App.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-
+        <!-- Outras atividades -->
         <activity
             android:name=".Gerenciamento.Tela.TelaGerenciamento"
             android:theme="@style/Theme.SCManager"/>
@@ -37,5 +34,4 @@
             android:resource="@array/preloaded_fonts" />
 
     </application>
-
 </manifest>
